--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Messages</title>
+<title>Розсилка</title>
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
