--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Messages</title>
+<title>Статистика</title>
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -58,21 +58,21 @@
 			<div class="card horizontal">
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
 						<div class="collection">
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[0]}}</span>Тест №1</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[1]}}</span>Тест №2</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[2]}}</span>Тест №3</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[3]}}</span>Тест №4</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[4]}}</span>Тест №5</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[5]}}</span>Тест №6</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[6]}}</span>Тест №7</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[7]}}</span>Тест №8</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[8]}}</span>Тест №9</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[9]}}</span>Тест №10</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[10]}}</span>Тест №11</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[11]}}</span>Тест №12</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[12]}}</span>Тест №13</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[13]}}</span>Тест №14</div>
-        					<div  class="collection-item"><span class="new badge" data-badge-caption="views">{{mas[14]}}</span>Тест №15</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[0]}}</span>Тест №1</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[1]}}</span>Тест №2</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[2]}}</span>Тест №3</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[3]}}</span>Тест №4</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[4]}}</span>Тест №5</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[5]}}</span>Тест №6</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[6]}}</span>Тест №7</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[7]}}</span>Тест №8</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[8]}}</span>Тест №9</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[9]}}</span>Тест №10</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[10]}}</span>Тест №11</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[11]}}</span>Тест №12</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[12]}}</span>Тест №13</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[13]}}</span>Тест №14</div>
+        					<div  class="collection-item white-text blue-grey darken-3"><span class="new badge" data-badge-caption="views">{{mas[14]}}</span>Тест №15</div>
       					</div>
 							<!-- <div class="card-content col 6">
 								<div class = "white-text"><div class="chip" id="les1">{{mas[0]}}</div>Тест №1</div><br>
