--- a/templates/messages.html
+++ b/templates/messages.html
@@ -20,8 +20,16 @@
 
 	});
 	socket.on('bot_msg', function(msg) {
-		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_id).height() }, "slow");
-		$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+		if ($("#"+msg.user_id).is(":visible")){
+			$('#chat-messages').animate({ scrollTop: $('#'+msg.user_id).height() }, "slow");
+			$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+		}
+		else{
+
+			$('#chat-messages').animate({ scrollTop: $('#'+msg.user_id).height() }, "slow");
+			$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+		}
+		
 
 	});
 
@@ -98,7 +106,7 @@
 				<div class="card horizontal blue-grey darken-3">
 					<div id="data" class="card-content blue-grey darken-3 col s12">
 						{% for key,val in users.items() %}
-						<div class="input-field col s12">
+						<div class="input-field col s12"><span id="les10" class="new badge" data-badge-caption="views">5</span>
 						<input  class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}">
 					</div><br>
 						{%endfor%}
