--- a/templates/messages.html
+++ b/templates/messages.html
@@ -106,8 +106,8 @@
 				<div class="card horizontal blue-grey darken-3">
 					<div id="data" class="card-content blue-grey darken-3 col s12">
 						{% for key,val in users.items() %}
-						<div class="input-field col s12"><span id="les10" class="new badge" data-badge-caption="views">5</span>
-						<input  class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}">
+						<div class="input-field col s12">
+						<input  class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}"><i class="material-icons right">insert_comment</i>
 					</div><br>
 						{%endfor%}
 					</div>
