--- a/templates/messages.html
+++ b/templates/messages.html
@@ -108,7 +108,7 @@
 						{% for key,val in users.items() %}
 						<div class="input-field col s12">
 							<i class="material-icons prefix">insert_comment</i>
-						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}">
+						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}"><label for="icon_prefix">{{val}}</label>
 					</div><br>
 						{%endfor%}
 					</div>
