--- a/templates/messages.html
+++ b/templates/messages.html
@@ -107,9 +107,10 @@
 					<div id="data" class="card-content blue-grey darken-3 col s12">
 						{% for key,val in users.items() %}
 						<div class="input-field col s12">
-							<i class="material-icons prefix">insert_comment</i>
-						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}"><label for="icon_prefix">{{val}}</label>
-					</div><br>
+							
+						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}">
+					<i class="material-icons" style="float:right">insert_comment</i>
+				</div><br>
 						{%endfor%}
 					</div>
 				</div>
