--- a/templates/messages.html
+++ b/templates/messages.html
@@ -107,9 +107,9 @@
 					<div id="data" class="card-content blue-grey darken-3 col s12">
 						{% for key,val in users.items() %}
 						<div class="input-field col s12">
-							
-						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}">
-					<i class="material-icons" style="float:right">insert_comment</i>
+						<!-- 	
+						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}"> -->
+						<button   id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})">{{val}}<i class="material-icons right">insert_comment</i></button>
 				</div><br>
 						{%endfor%}
 					</div>
