--- a/templates/messages.html
+++ b/templates/messages.html
@@ -109,7 +109,7 @@
 						<div class="input-field col s12">
 						<!-- 	
 						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}"> -->
-						<button   id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})">{{val}}<i class="material-icons right">insert_comment</i></button>
+						<button   id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})"><span class="new badge">4</span>{{val}}</button>
 				</div><br>
 						{%endfor%}
 					</div>
