--- a/templates/messages.html
+++ b/templates/messages.html
@@ -110,7 +110,7 @@
 						<!-- 	
 						<input  id="icon_prefix" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}"> -->
 						<button   id="icon_prefix_{{key}}" class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})">{{val}}
-							<i id ="{{key}}_icon" class="material-icons right" style="display:hidden">insert_comment</i>
+							<i id ="{{key}}_icon" class="material-icons right" style="display:none;">insert_comment</i>
 						</button>
 				</div><br>
 						{%endfor%}
