--- a/templates/messages.html
+++ b/templates/messages.html
@@ -25,6 +25,11 @@
 			$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 		}
 		else{
+			if (Notification.permission === "granted") {
+                var notification = new Notification(msg.user_name+"\n"+msg.message_text);
+                setTimeout(notification.close.bind(notification), 1000);
+                notification = null;
+            }
 			$("#"+msg.user_id+"_icon").show();
 			$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 		}
