--- a/templates/messages.html
+++ b/templates/messages.html
@@ -33,6 +33,11 @@
                 setTimeout(notification.close.bind(notification), 1000);
                 notification = null;
             }
+            if (Notification.permission == "granted") {
+                var notification = new Notification(msg.user_name+"\n"+msg.message_text);
+                setTimeout(notification.close.bind(notification), 1000);
+                notification = null;
+            }
 			$("#"+msg.user_id+"_icon").show();
 			$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 		}
