--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Розсилка</title>
 <meta content="width=device-width, initial-scale=1" name="viewport" />
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
