--- a/templates/messages.html
+++ b/templates/messages.html
@@ -75,8 +75,11 @@
 
 	}
 	function send_message(obj){
-		socket.emit('send_message', {user_id: obj.id.split('_form')[0], message_text: obj.msg_text.value});
-		obj.msg_text.value='';
+		if (obj.msg_text.value != ''){
+			socket.emit('send_message', {user_id: obj.id.split('_form')[0], message_text: obj.msg_text.value});
+			obj.msg_text.value='';
+		}
+		
 	};
 
 
